# sherpa-voice-assistant

./: .gitignore  AGENTS.md  JETSON_OPTIMIZATION.md  README.md  go.mod  go.sum
cmd/assistant/: main.go
internal/audio/: capture.go  playback.go  polyphase.go  polyphase_test.go  resampler.go  resampler_test.go
internal/config/: config.go  voices.go
internal/llm/: client.go  processor.go  tools.go  weather.go  weather_test.go  websearch.go  websearch_test.go
internal/models/: download.go
internal/setup/: download.go  setup.go
internal/sherpa/: sherpa_darwin.go  sherpa_linux.go
internal/stt/: processor.go  recognizer.go  silero.go  stt.go  whisper.go
internal/tts/: kokoro.go  processor.go  synthesizer.go  synthesizer_test.go  text.go  text_test.go  tts.go
rust-impl/: .gitignore  Cargo.toml  README.md  rustfmt.toml
rust-impl/scripts/: build.sh  setup.sh
rust-impl/src/: main.rs
rust-impl/src/audio/: capture.rs  mod.rs  playback.rs  resampler.rs  util.rs
rust-impl/src/config/: config.rs  mod.rs  voices.rs
rust-impl/src/llm/: client.rs  mod.rs  weather.rs  websearch.rs
rust-impl/src/models/: mod.rs
rust-impl/src/setup/: mod.rs
rust-impl/src/stt/: mod.rs  recognizer.rs  silero.rs  whisper.rs
rust-impl/src/tts/: kokoro.rs  mod.rs  synthesizer.rs  text.rs
scripts/: build.sh  diagnose_bluetooth.sh  jetson_setup.sh  manage_airpods.sh  setup.sh
searxng/: docker-compose.yml  settings.yml
