[package]
name = "voice-assistant"
version = "0.1.0"
edition = "2024"
authors = ["Alejandro Galue <galue.alejandro@gmail.com>"]
description = "A real-time voice assistant using Sherpa for STT/TTS and RIG for LLM interaction"
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal"] }
tokio-util = "0.7"

# Audio I/O
cpal = "0.17"
rubato = "1"  # High-quality audio resampling
audioadapter-buffers = "2"  # Buffer adapters for rubato

# LLM interaction
rig-core = { version = "0.29", default-features = false, features = ["reqwest-rustls"] }

# CLI and configuration
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
dirs = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }

# Utilities
parking_lot = "0.12"
ringbuf = "0.4"  # Lock-free ring buffer for audio
num_cpus = "1"   # CPU core detection for thread configuration

# Platform-specific dependencies for sherpa-rs
#
# IMPORTANT: Version Pinning for ABI Compatibility
# =================================================
# sherpa-rs depends on sherpa-rs-sys which bundles C API headers from a specific
# sherpa-onnx version. For CUDA builds, we compile sherpa-onnx from source and
# the header version MUST match to avoid ABI mismatches.
#
# Current mapping (update when upgrading):
#   sherpa-rs 0.6.x -> sherpa-rs-sys 0.6.8 -> sherpa-onnx v1.12.10 headers
#
# The build script will verify version compatibility and fail if mismatched.
# See README.md "Upgrading Dependencies" section for the upgrade procedure.
#
# To find the sherpa-onnx version bundled in sherpa-rs-sys:
#   1. Check Cargo.lock for sherpa-rs-sys version
#   2. Look at sherpa-rs-sys source: https://github.com/thewh1teagle/sherpa-rs
#   3. Check the bundled c-api.h or dist.json (note: dist.json may be wrong)
#   4. Compare struct definitions with sherpa-onnx releases
#
# macOS: Use static linking for easier deployment
[target.'cfg(target_os = "macos")'.dependencies]
sherpa-rs = { version = "=0.6.8", default-features = false, features = ["tts", "static"] }

# Linux: Enable CUDA support (incompatible with download-binaries and static)
[target.'cfg(target_os = "linux")'.dependencies]
sherpa-rs = { version = "=0.6.8", default-features = false, features = ["tts", "cuda"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
# Enable SIMD optimizations for target CPU (use native for Jetson builds)
# For cross-compilation, set target-cpu via RUSTFLAGS environment variable

[profile.dev]
opt-level = 1
